# ssproj1

./: CMakeLists.txt  README.md  SETUP.md  compressed_solution.txt  solution-bitconverter.executable  solution-compress.executable  solution-uncompress.executable
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  bitconverter.cpp  compress.cpp  uncompress.cpp
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp
src/encoder/: CMakeLists.txt  HCNode.hpp  HCTree.cpp  HCTree.hpp
test/: CMakeLists.txt  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp
